# Course-generator

./: .gitignore  README.md  pyproject.toml
examples/: custom-tools-lesson.md
src/: __init__.py  agents.py  crew.py  flow.py  main.py  tasks.py
