[project]
name = "crewai-course-generator"
version = "0.1.0"
description = "A CrewAI-powered course content generator for CrewAI Campus"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "crewai>=0.98.0",
    "crewai-tools>=0.40.0",
]

[project.scripts]
course-gen = "src.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
